--- a/SiteWeb-L.Corentin-240314/styles.css
+++ b/SiteWeb-L.Corentin-240314/styles.css
@@ -42,12 +42,16 @@
                                         
 */
 :root {
-    --main-color : #219150;
-    --second-color : #45c989;
-    --third-color : #6ede9c;
-    --contrast-color : #f1c40f;
+    --main-color : #2AB663;
+    --main-l1-color : #45d47f;
+    --main-l2-color : #6adc98;
+    --main-d1-color : #219150;
+    --main-d2-color : #1a7440;
+    --contrast-color: #f1c40f;
     --background-color:#eafaf1;
     --dark-color: #05150B;
+    --glaucous-color: #6082B6;
+    --silver-color : #C0C0C0;
     --nav-radius: 50px;
     --main-radius: 25px;
 }
@@ -74,28 +78,24 @@
 | . \<_> |<_-</ ._><_-<
 |___/<___|/__/\___./__/
 */
-@font-face {
-  font-family: HemiHead;
-  src: url(assets/fonts/HemiHead.otf);
-}
+
 
 *{
-    transition: ease-in-out all .25s;
     font-family: Bahnschrift, Arial, sans-serif;
 }
 
 html {
     background-color: var(--background-color);
-    font-size: 16px;
+    font-family: Bahnschrift, Arial, sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: HemiHead, Bahnschrift, Arial, sans-serif;
+h1, h1 *,
+h2, h2 *,
+h3, h3 *,
+h4, h4 *,
+h5, h5 *,
+h6, h6 * {
+    font-family: Tahoma, Bahnschrift, Arial, sans-serif;
 }
 
 li {
@@ -106,10 +106,6 @@ a {
     text-decoration: none;
 }
 
-div {
-  font-family: myFirstFont;
-}
-
 img {  
     user-select: none;
     -moz-user-select: none;
@@ -118,6 +114,10 @@ img {
     -ms-user-select: none;
 }
 
+.logo {
+    width: 5em;
+    height: auto;
+}
 
 
 /*
@@ -129,7 +129,7 @@ img {
 header nav {
     z-index: 5;
     box-shadow: 0 0 10px 0 var(--dark-color);
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 10%;
     left: 10%;
@@ -144,26 +144,27 @@ header nav {
     align-content: space-around;
     justify-content: space-around;
     align-items: center;
-    padding-bottom: 0.25em;
-}
-
-header nav .logo {
-    width: 5em;
+    padding: 1.5em 0;
+    transition: width 0.25s ease-in-out, 
+                border-radius 0.25s ease-in-out, 
+                right 0.25s ease-in-out, 
+                left 0.25s ease-in-out;
 }
 
 header nav h2 {
     font-size: 2.5em;
-    color: var(--main-color);
-    text-shadow: 5px 0 5px var(--third-color);
+    color: var(--main-d1-color);
+    text-shadow: 5px 0 5px var(--main-l1-color);
+    margin: 0 0.375em;
 }
 
 header nav #nav-menu {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
     align-content: center;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 header nav #nav-menu li {
@@ -190,7 +191,7 @@ header #title-div {
     text-align: center;
     width: 50%;
     position: absolute;
-    top: 13.5em;
+    top: 16em;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -199,11 +200,14 @@ header #title-div h1 {
     padding-bottom: 0.375em;
 }
 
-header #header-bg{
+header {
     width: 100%;
-    object-fit: cover;
     height: 30em;
+    background:url('assets/decoration/header-bg.webp') no-repeat center center;
+    background-size: cover;
 }
+
+
 
 
 
@@ -219,19 +223,19 @@ main {
     padding: 0 15%;
 }
 
-main #action-fields h3 {
+main #action-fields h2 {
     text-align: center;
     padding: 2em;
     font-size: 1.75em;
 }
 
 main #action-fields .cards {
-    
+    display: block;
 }
 
 main #action-fields .card {
     position: relative;
-    background-color: var(--second-color);
+    background-color: var(--main-l1-color);
     margin-bottom: 3.125em;
     border-radius: var(--main-radius);
     height: auto;
@@ -264,7 +268,8 @@ main #action-fields .card .text {
     align-items: center;
 }
 
-main #action-fields .card .text h4 {
+main #action-fields .card .text h3 {
+    margin-top: 0.5em;
     font-size: 1.25em;
     margin-bottom: 1.5em;
 }
@@ -278,14 +283,102 @@ main #action-fields .card .text h4 {
 */
 footer {
     background-color: var(--main-color);
-    height: 50em;
+    height: auto;
+    margin-top: 200px;
+    color: var(--dark-color);
 }
 
-footer #footer-start{
-    margin-top: -10em;
+#before-footer{
+    margin-top: -20em;
     width: 100%;
+    height: auto;
+    z-index: 100;
     object-fit: cover;
 }
+
+#footer-content{
+    padding: 2rem 2.5rem;
+}
+
+footer fieldset {
+    border: none;
+    border-top: 2px dotted var(--contrast-color);
+    margin: 20px;
+}
+
+footer fieldset legend {
+    padding: 0 10px;
+    font-size: 1.25em;
+    text-align: center;
+}
+
+#footer-start {
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+
+#footer-start  .logo {
+    width: 7.5em;
+    height: auto;
+}
+
+#footer-donation button {
+    background-color: var(--contrast-color);
+    border: none;
+    padding: 8px 16px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin: 4px 2px;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 transparent;
+    filter: blur(5px);
+}
+
+#footer-donation button:hover,
+#footer-donation button:focus {
+    filter: blur(0px);
+}
+
+#footer-donation button:active {
+    box-shadow: 0 0 5px 0 var(--silver-color);
+}
+
+#footer-nav nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+#footer-nav nav ul li a {
+    display: block;
+    color: #161616; /* Couleur du texte */
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#footer-nav nav ul li a:hover {
+    background-color: rgba(0, 0, 0, 0.1); /* Couleur de fond légère au survol */
+}
+
+footer .grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+    border-bottom: 1px solid var(--contrast-color);
+}
+
+#footer-end {
+    text-align: center;
+    padding: 10px;
+    margin: 10px;
+}
+
 
 
 /*
@@ -294,22 +387,32 @@ footer #footer-start{
 |     |/ ._>/ . || |<_> |
 |_|_|_|\___.\___||_|<___|
 */
-@media screen and (max-width: 480px) {
-    html {
-        font-size: 14.125px;
+@media screen and (max-width: 500px)
+{
+    header {
+        /* height: 35em; */
+        background:url('assets/decoration/header-bg-phone.webp') no-repeat center center;
     }
+
     header nav {
         right: 0;
         left: 0;
         width: 100%;
         border-radius: 0;
     }
-    header #title-div {
-        width: 80%;
+
+    header nav #nav-menu li {
+        padding: 0.5em;
     }
 
+    header #title-div {
+        width: 80%;
+        top: 16.5em;
+    }
+
+
     main {
-        margin-top: -4.5em;
+        margin-top: -5em;
         padding: 0 10%;
     }
 
@@ -325,7 +428,37 @@ footer #footer-start{
     main #action-fields .left img {
         left: -1.75em;
     }
+
     main #action-fields .card .text h4 {
         margin-top: 1.25em;
     }
+
+    footer .grid {
+        grid-template-columns: 1fr;
+    }
+
+}
+
+@media screen and (max-width: 420px) {
+    header nav {
+        flex-direction: column;
+    }
+    
+    header nav h2 {
+        display: none;
+    }
+
+    main #action-fields .card img {
+        height: 3.75em;
+        top: -1.25em;
+    }
+
+    main #action-fields .right img {
+        right: -1.25em;
+    }
+
+    main #action-fields .left img {
+        left: -1.25em;
+    }
+
 }
