--- a/SiteWeb-L.Corentin-240314/styles.css
+++ b/SiteWeb-L.Corentin-240314/styles.css
@@ -232,6 +232,7 @@ header {
     width: 100%;
     height: 30em;
     background: url('assets/decoration/header-bg-phone.webp') no-repeat center center;
+    background-size: cover;
 }
 
 
@@ -368,6 +369,54 @@ main #animals .animal p:not(:last-child) {
     margin-bottom: 1em;
 }
 
+main #Maquettes img {
+    height: 20em;
+    width: auto;
+    box-shadow: 0 0 5px 0 var(--main-color);
+    margin: 1em;
+    padding: 1em;
+}
+
+main #FAQ div {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-around;
+    align-items: center;
+}
+
+main #FAQ details {
+    width: 100%;
+    margin-bottom: 1em;
+    border: none;
+    background: none;
+}
+
+main #FAQ details summary {
+    font-weight: bold;
+    cursor: pointer;
+    background-color: var(--background-d1-color);
+    border: 1px solid var(--dark-color);
+    padding: 0.5em;
+}
+
+main #FAQ details p {
+    margin: 0;
+    padding: 0.75em;
+    border: 1px solid var(--dark-color);
+    border-top: 1px dotted var(--dark-color);
+}
+
+main #FAQ details p a {
+    text-decoration: underline;
+    color: var(--dark-color);
+}
+
+main #FAQ details[open] summary {
+    border-bottom: none;
+}
+
 
 
 /*
@@ -385,7 +434,7 @@ footer {
 }
 
 #before-footer{
-    margin-top: -18.75em;
+    margin-top: -15%;
     width: 100%;
     height: auto;
     object-fit: cover;
@@ -505,6 +554,7 @@ footer #action-fields .grid{
 
     header {
         background: url('assets/decoration/header-bg.webp') no-repeat center center;
+        background-size: cover;
     }
 
     header nav {
