--- a/SiteWeb-L.Corentin-240314/styles.css
+++ b/SiteWeb-L.Corentin-240314/styles.css
@@ -215,8 +215,8 @@ header nav #nav-menu li a:hover {
 }
 
 header #title-div {
-    color: var(--background-color);
-    text-shadow: 0 0 5px var(--dark-color);
+    color: var(--dark-color);
+    text-shadow: 0 0 5px var(--background-color);
     text-align: center;
     width: 50%;
     position: absolute;
@@ -225,7 +225,7 @@ header #title-div {
     transform: translate(-50%, -50%);
 }
 header #title-div h1 {
-    font-size: 2.5em;
+    font-size: 2em;
     padding-bottom: 0.375em;
 }
 
@@ -254,7 +254,7 @@ main {
 }
 
 main h2 {
-    font-size: 1.75em;
+    font-size: 1.5em;
     margin-bottom: 0.75em;
     border-left: 0.2em solid var(--main-color);
     padding: 0.5em;
@@ -270,7 +270,7 @@ main #site-presentation div {
 
 main #site-presentation p {
     color: var(--dark-color);
-    font-size: 16px;
+    font-size: 1.125em;
     margin-bottom: 0.75em;
 }
 
@@ -376,6 +376,10 @@ main #Maquettes img {
     box-shadow: 0 0 5px 0 var(--main-color);
     margin: 1em;
     padding: 1em;
+}
+
+main #Maquettes img:hover {
+    transform: scale(1.1);
 }
 
 main #FAQ div {
