--- a/SiteWeb-L.Corentin-240314/styles.css
+++ b/SiteWeb-L.Corentin-240314/styles.css
@@ -292,7 +292,7 @@ main #action-fields .right img {
 }
 
 main #action-fields .left img {
-    left: -1.5em;
+    right: -1.5em;
 }
 
 main #action-fields .card .text {
@@ -444,19 +444,28 @@ main #Ressources div ul:not(:last-child) {
 }
 
 main #Ressources li {
-    margin: 1.5em;
+    margin: 1em;
+    padding: 0.5em;
+}
+
+main #Ressources {
+    color: var(--dark-color);
+    /* margin: 0 15%; */
+    border: 1px solid var(--dark-color);
+    border-radius: var(--main-radius);
+    background-color: var(--background-d1-color);
+    box-shadow: 0 0 5px 0 var(--main-color);
 }
 
 main #Ressources a {
     color: var(--dark-color);
     font-size: 1.25em;
     padding: 0.5em;
-    border: 1px solid var(--dark-color);
-    border-radius: var(--main-radius);
-    background-color: var(--background-d1-color);
-    box-shadow: 0 0 5px 0 var(--main-color);
+    /* border-radius: var(--main-radius); */
 }
-main #Ressources a:hover {
+
+main #Ressources li:hover {
+    border-radius: var(--main-radius);
     background-color: var(--contrast-color);
     color: var(--background-color);
 }
