--- a/SiteWeb-L.Corentin-240314/styles/style.css
+++ b/SiteWeb-L.Corentin-240314/styles/style.css
@@ -52,12 +52,12 @@
 */
 @font-face {
     font-family: 'Bahnschrift';
-    src: url('assets/fonts/Bahnschrift.ttf') format('truetype');
+    src: url('../assets/fonts/Bahnschrift.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Shojumaru';
-    src: url('assets/fonts/Shojumaru.ttf') format('truetype');   
+    src: url('../assets/fonts/Shojumaru.ttf') format('truetype');
 }
 
 
@@ -146,7 +146,7 @@ img {
 .logo {
     width: 5em;
     height: auto;
-    padding: 0.5em;
+    padding: 0.75em;
 }
 .card {
     position: relative;
@@ -203,13 +203,13 @@ header nav #nav-menu li {
 header nav #nav-menu li a {
     color: var(--dark-color);
     font-size: 1.25em;
-    padding: 0.625em;
+    padding: 0.9em 0.625em;
     text-shadow: 1px 1px 3px white;
 }
 
 header nav #nav-menu li a.active{
     border-bottom: var(--contrast-color) 4px dotted;
-    font-size: 1.25em;
+    font-size: 1.125em;
 }
 
 header nav #nav-menu li a:hover,
@@ -236,7 +236,7 @@ header #title-div h1 {
 header {
     width: 100%;
     height: 30em;
-    background: url('assets/decoration/header-bg-phone.webp') no-repeat center center;
+    background: url('../assets/decoration/header-bg-phone.webp') no-repeat center center;
     background-size: cover;
 }
 
@@ -376,8 +376,8 @@ main #animals .animal p:not(:last-child) {
 }
 
 main #Maquettes img {
-    height: 20em;
-    width: auto;
+    height: auto;
+    width: 80%;
     box-shadow: 0 0 5px 0 var(--main-color);
     margin: 1em;
     padding: 1em;
@@ -551,14 +551,6 @@ footer fieldset legend {
     text-align: center;
 }
 
-main #Maquettes img {
-    height: auto;
-    width: 80%;
-    box-shadow: 0 0 5px 0 var(--main-color);
-    margin: 1em;
-    padding: 1em;
-}
-
 #footer-start {
     text-align: center;
     padding: 10px;
@@ -653,7 +645,7 @@ footer #action-fields .grid{
     }
 
     header {
-        background: url('assets/decoration/header-bg.webp') no-repeat center center;
+        background: url('../assets/decoration/header-bg.webp') no-repeat center center;
         background-size: cover;
     }
 
